# aws_mouse

./: README.md  backupconfig.sh  faq.md  loc.sh  runmaze.sh  setup.sh  ubuntu-1804-ros1-melodic-dcv.sh  ubuntu-1804-ros2-dashing-dcv.sh  ubuntu-2004-ros2-foxy-dcv.sh  updateos.sh
src/img_recognition/: CMakeLists.txt
src/img_recognition/launch/: save_rosimage.launch  train_rosmodel.launch
src/img_recognition/param/: image_label.yaml  inference_model.yaml  train_model.yaml
src/img_recognition/script/: mkdir.py  rmdir.py  save_image.py  srv_client_save_image.py
src/img_recognition/src/: inference_model.py  train_model.py
src/jetbot_description/: CMakeLists.txt
src/jetbot_description/urdf/: jetbot.gazebo.xacro  jetbot.urdf
src/jetbot_navigation/: CMakeLists.txt
src/jetbot_slam/: CMakeLists.txt
src/maze_demo/: CMakeLists.txt  setup.py
src/maze_demo/scripts/: runner_template.py  test_runner.py
src/maze_demo/src/mouse_common/: utils.py
src/maze_demo/src/pyamaze/: pyamaze.py
src/maze_world/: CMakeLists.txt
src/maze_world/world/: empty_flower.world  nflower_world.world  simple_6_6.world
src/mouse_smach/: CMakeLists.txt
src/pid_tune/: CMakeLists.txt
